# long-term-memory-for-llms

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  llm_config.yaml  pyproject.toml
src/agents/: main.py
src/agents/tools/: add_memory.py  check_token_count.py  delete_memory.py  search_memory.py
src/llm_handler/: openai_handler.py  provider.py
src/memory_handler/: azure_search_memory_handler.py
src/prompts/: chat_history_summary_prompt.py  memory_categories.py  system_prompt.py
src/providers/: llm_provider.py  vector_db_provider.py
src/utilities/: llm_config_handler.py  llm_helper.py
