[project]
name = "long-term-memory-for-llms"
authors = [{name = "Prakhar Jadaun", email = "prakharvjadaun@gmail.com"}]
version = "0.1.0"
requires-python = ">=3.12,<4.0.0"
dependencies = [
    "requests",
    "chainlit>=2.6.3",
    "python-dotenv>=1.1.1",
    "loguru (>=0.7.3,<0.8.0)"
]

[project.optional-dependencies]
dev = [
    "pytest"
]