[project]
name = "long-term-memory-for-llms"
authors = [{name = "Prakhar Jadaun", email = "prakharvjadaun@gmail.com"}]
version = "0.1.0"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "requests",
    "chainlit>=2.6.3",
    "python-dotenv>=1.1.1",
    "loguru (>=0.7.3,<0.8.0)",
    "openai (>=1.97.1,<2.0.0)",
    "azure-search-documents (>=11.5.3,<12.0.0)",
    "tiktoken (>=0.9.0,<0.10.0)"
]

[project.optional-dependencies]
dev = [
    "pytest"
]

[tool.poetry]
name = "long-term-memory-for-llms"
version = "0.1.0"
package-mode=false